80 remove unnecessary table (#98)
* pull and resolve conflicts

* change code style

* personalInfo tab component update

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-gateway into jira/SH-24

# Conflicts:
#	src/main/java/com/tardisone/gateway/config/WebSecurityConfig.java
#	src/main/resources/application-local.yml

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-company-service into jira/SH-93

# Conflicts:
#	src/main/java/shamu/company/info/controller/EmergencyContactRestController.java

* update avatar upload function

* resolve a update error

* change code style

* add permission verification function

* add permission verification function

* make it perfect

* resolve some bug

* add Hashids

* review

* review

* review

* review

* review

* add countries csv

* resolve bug

* remove useless blank

* style check

* review

* style check

* change the way to get head portrait

* code style

* remove permission VIEW_USER_HEAD_PORTRAIT

* code style

* add a blank

* new time off policy

* update schema

* complete the function

* java code style check

* refactor code

* java code style check

* refactor code

* java code style check

* remove useless code

* code style check

* add aws secret manager

* code review

* remove duplicate code

* move codes to service layer

* code style check

* remove useless table 'time_off_types'

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1141,6 +1141,7 @@ databaseChangeLog:
             foreignKeyName: time_off_policy_accruals_time_off_policies
             references: time_off_policies(id)
           tableName: time_off_policy_accruals
+
 - changeSet:
     id: 1557390699512-65
     author: Qi-Jia
@@ -1193,7 +1194,6 @@ databaseChangeLog:
       - dropColumn:
           columnName: office_id
           tableName: office_addresses
-
 
 - changeSet:
     id: 1557390699512-71
@@ -1253,3 +1253,59 @@ databaseChangeLog:
         columnName: holiday_date
         newDataType: Timestamp
         tableName: paid_holidays
+
+- changeSet:
+    id: 1556008164280-31
+    author: wenhao-eb
+    changes:
+    - dropForeignKeyConstraint:
+        baseTableName: time_off_types
+        constraintName: fk_time_off_types_companies
+
+- changeSet:
+    id: 1556008164280-32
+    author: wenhao-eb
+    changes:
+    - dropForeignKeyConstraint:
+        baseTableName: time_off_policies
+        constraintName: fk_time_off_policies_time_off_types
+
+- changeSet:
+    id: 1556008164280-33
+    author: wenhao-eb
+    changes:
+    - dropTable:
+        tableName: time_off_types
+
+- changeSet:
+    id: 1556008164280-34
+    author: wenhao-eb
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            name: name
+            type: varchar(255)
+        tableName: time_off_policies
+
+- changeSet:
+    id: 1556008164280-35
+    author: wenhao-eb
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            name: company_id
+            type: BIGINT
+            constraints:
+              foreignKeyName: fk_time_off_policies_companies
+              references: companies(id)
+        tableName: time_off_policies
+
+- changeSet:
+      id: 1556008164280-36
+      author: wenhao-eb
+      changes:
+      - dropColumn:
+          columnName: time_off_type_id
+          tableName: time_off_policies
