--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1309,3 +1309,53 @@ databaseChangeLog:
       - dropColumn:
           columnName: time_off_type_id
           tableName: time_off_policies
+
+- changeSet:
+    id: 1557390699512-75
+    author: Qi-Jia
+    runOnchange: ture
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/request-approval-statuses.csv
+        primaryKey: id
+        tableName: time_off_request_approval_statuses
+
+- changeSet:
+    id: 1558508208105-76
+    author: Qi-Jia
+    changes:
+    - renameColumn:
+        columnDataType: BIGINT
+        newColumnName: time_off_request_approval_status_id
+        oldColumnName: approval_status_id
+        tableName: time_off_requests
+
+- changeSet:
+    id: 1558508208105-79
+    author: Qi-Jia
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            name: comment
+            type: TEXT
+        tableName: time_off_requests
+
+- changeSet:
+    id: 1558508208105-80
+    author: Qi-Jia
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            name: approver_comment
+            type: TEXT
+        tableName: time_off_requests
+
