--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1383,3 +1383,28 @@ databaseChangeLog:
           columnName: department_id
           tableName: jobs_users
 
+- changeSet:
+    id: 1559007436482-1
+    author: shuangyu-eb
+    changes:
+    - modifyDataType:
+        columnName: name
+        newDataType: varchar(255)
+        tableName: ethnicities
+
+- changeSet:
+    id: 1559006895905-2
+    author: shuangyu-eb
+    runOnChange: true
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/ethnicities.csv
+        primaryKey: id
+        tableName: ethnicities
