78: time off request emails (#118)
78: time off request emails (#118)

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -26,6 +26,7 @@ spring:
 application:
   systemEmailAddress: noreply@interviewed.com
   frontEndAddress: http://localhost:3000/
+  helpUrl: http://localhost:3000/
 
 cloud:
   aws:
