--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,12 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yml
   thymeleaf:
     prefix: classpath:templates/
-
+    cache: false
+    suffix: .html
+    encoding: UTF-8
+    mode: HTML5
+  mvc:
+    locale: en_US
 cloud:
   aws:
     stack:
