107 add new benefit plans (#126)
* pull and resolve conflicts

* change code style

* personalInfo tab component update

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-gateway into jira/SH-24

# Conflicts:
#	src/main/java/com/tardisone/gateway/config/WebSecurityConfig.java
#	src/main/resources/application-local.yml

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-company-service into jira/SH-93

# Conflicts:
#	src/main/java/shamu/company/info/controller/EmergencyContactRestController.java

* update avatar upload function

* resolve a update error

* change code style

* add permission verification function

* add permission verification function

* make it perfect

* resolve some bug

* add Hashids

* review

* review

* review

* review

* review

* add countries csv

* resolve bug

* remove useless blank

* style check

* review

* style check

* change the way to get head portrait

* code style

* remove permission VIEW_USER_HEAD_PORTRAIT

* code style

* add a blank

* new time off policy

* save changes(step2 endpoint tables entities)

* save changes

* save changes

* save changes

* save changes

* google java code style check

* add annotation

* review

* add MANAGE_BENEFIT_PLAN permission

* add blank line

* review

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1430,3 +1430,236 @@ databaseChangeLog:
             name: to_name
             type: varchar(255)
         tableName: emails
+
+- changeSet:
+      id: 1556008164280-37
+      author: wenhao-eb
+      changes:
+      - dropForeignKeyConstraint:
+          baseTableName: benefit_plan_types
+          constraintName: fk_benefit_plan_types_companies
+
+- changeSet:
+      id: 1556008164280-38
+      author: wenhao-eb
+      changes:
+      - dropColumn:
+          columnName: company_id
+          tableName: benefit_plan_types
+
+
+- changeSet:
+      id: 1556008164280-39
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: company_id
+              type: BIGINT
+              constraints:
+                foreignKeyName: fk_benefit_plans_companies
+                references: companies(id)
+          tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-40
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: plan_id
+              type: varchar(255)
+          tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-41
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: start_date
+              type: datetime
+          tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-42
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: end_date
+              type: datetime
+          tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-43
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: document_url
+              type: text
+          tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-44
+      author: wenhao-eb
+      changes:
+      - addColumn:
+            columns:
+            - column:
+                  name: name
+                  type: varchar(255)
+            tableName: benefit_plan_coverages
+
+- changeSet:
+      id: 1556008164280-45
+      author: wenhao-eb
+      runOnchange: ture
+      changes:
+      - loadUpdateData:
+            columns:
+            - column:
+                  name: id
+                  type: NUMERIC
+            - column:
+                  name: name
+                  type: STRING
+            file: db/changelog/data/benefit-plan-types.csv
+            primaryKey: id
+            tableName: benefit_plan_types
+
+- changeSet:
+      id: 1556008164280-46
+      author: wenhao-eb
+      changes:
+      - addColumn:
+            columns:
+            - column:
+                  name: employer_cost
+                  type: INT
+            tableName: benefit_plan_coverages
+
+- changeSet:
+      id: 1556008164280-47
+      author: wenhao-eb
+      changes:
+      - addColumn:
+            columns:
+            - column:
+                  name: employee_cost
+                  type: INT
+            tableName: benefit_plan_coverages
+
+- changeSet:
+      id: 1556008164280-48
+      author: wenhao-eb
+      changes:
+      - addColumn:
+            columns:
+            - column:
+                  name: description
+                  type: TEXT
+            tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-49
+      author: wenhao-eb
+      changes:
+      - dropColumn:
+            columnName: policy_id
+            tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-50
+      author: wenhao-eb
+      changes:
+      - createTable:
+          columns:
+          - column:
+              name: id
+              type: BIGINT
+              autoIncrement: true
+              constraints:
+                primaryKey: true
+          - column:
+              name: name
+              type: VARCHAR(255)
+          - column:
+              name: created_at
+              type: DATETIME
+          - column:
+              name: updated_at
+              type: DATETIME
+          - column:
+              name: deleted_at
+              type: DATETIME
+          tableName: retirement_types
+
+- changeSet:
+      id: 1556008164280-51
+      author: wenhao-eb
+      changes:
+      - createTable:
+          columns:
+          - column:
+              name: id
+              type: BIGINT
+              autoIncrement: true
+              constraints:
+                primaryKey: true
+          - column:
+              name: benefit_plan_id
+              type: BIGINT
+              constraints:
+                foreignKeyName: fk_benefit_plans
+                references: benefit_plans(id)
+          - column:
+              name: retirement_type_id
+              type: BIGINT
+              constraints:
+                foreignKeyName: fk_retirement_types
+                references: retirement_types(id)
+          - column:
+              name: created_at
+              type: datetime
+          - column:
+              name: updated_at
+              type: datetime
+          - column:
+              name: deleted_at
+              type: datetime
+          tableName: retirement_plans_types
+
+- changeSet:
+      id: 1556008164280-52
+      author: wenhao-eb
+      runOnchange: ture
+      changes:
+      - loadUpdateData:
+          columns:
+          - column:
+              name: id
+              type: NUMERIC
+          - column:
+              name: name
+              type: STRING
+          file: db/changelog/data/retirement-types.csv
+          primaryKey: id
+          tableName: retirement_types
+
+- changeSet:
+      id: 1556008164280-53
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: document_name
+              type: varchar(255)
+          tableName: benefit_plans
