128 benefit plan dashbord (#137)
* pull and resolve conflicts

* change code style

* personalInfo tab component update

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-gateway into jira/SH-24

# Conflicts:
#	src/main/java/com/tardisone/gateway/config/WebSecurityConfig.java
#	src/main/resources/application-local.yml

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-company-service into jira/SH-93

# Conflicts:
#	src/main/java/shamu/company/info/controller/EmergencyContactRestController.java

* update avatar upload function

* resolve a update error

* change code style

* add permission verification function

* add permission verification function

* make it perfect

* resolve some bug

* add Hashids

* review

* review

* review

* review

* review

* add countries csv

* resolve bug

* remove useless blank

* style check

* review

* style check

* change the way to get head portrait

* code style

* remove permission VIEW_USER_HEAD_PORTRAIT

* code style

* add a blank

* new time off policy

* save changes(step2 endpoint tables entities)

* save changes

* save changes

* save changes

* save changes

* google java code style check

* add annotation

* review

* add MANAGE_BENEFIT_PLAN permission

* add blank line

* review

* save changes

* save changes

* show benefit types and benefit plans

* add or remove benefit plan users function

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1663,3 +1663,14 @@ databaseChangeLog:
               name: document_name
               type: varchar(255)
           tableName: benefit_plans
+
+- changeSet:
+      id: 1556008164280-54
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: enrolled
+              type: BOOLEAN
+          tableName: benefit_plans_users
