--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1665,6 +1665,99 @@ databaseChangeLog:
           tableName: benefit_plans
 
 - changeSet:
+      id: 1561101909845-3
+      author: shuangyu-eb
+      runOnChange: true
+      changes:
+      - loadUpdateData:
+            columns:
+            - column:
+                 name: id
+                 type: NUMERIC
+            - column:
+                 name: name
+                 type: STRING
+            file: db/changelog/data/benefit-plan-dependent-relationships.csv
+            primaryKey: id
+            tableName: benefit_plan_dependent_relationships
+
+- changeSet:
+      id: 1561102763483-4
+      author: shuangyu-eb
+      changes:
+      - addColumn:
+             columns:
+             - column:
+                  name: postal_code
+                  type: varchar(255)
+             - column:
+                  name: city
+                  type: varchar(255)
+             - column:
+                  name: middle_name
+                  type: varchar(255)
+             - column:
+                  name: street_1
+                  type: varchar(255)
+             - column:
+                  name: street_2
+                  type: varchar(255)
+             - column:
+                  name: birth_date
+                  type: DATETIME
+             - column:
+                  name: ssn
+                  type: varchar(255)
+             - column:
+                  name: gender_id
+                  type: INT
+             - column:
+                  name: state_id
+                  type: INT
+             tableName: benefit_plan_dependents
+
+- changeSet:
+    id: 1561106515815-5
+    author: shuangyu-eb
+    changes:
+      - modifyDataType:
+          columnName: gender_id
+          newDataType: BIGINT
+          tableName: benefit_plan_dependents
+
+- changeSet:
+      id: 1561105507144-6
+      author: shuangyu-eb
+      changes:
+      - addForeignKeyConstraint:
+          baseColumnNames: gender_id
+          baseTableName: benefit_plan_dependents
+          constraintName: fk_benefit_plan_dependents_genders
+          referencedColumnNames: id
+          referencedTableName: genders
+
+- changeSet:
+      id: 1561106838664-7
+      author: shuangyu-eb
+      changes:
+        - modifyDataType:
+            columnName: state_id
+            newDataType: BIGINT
+            tableName: benefit_plan_dependents
+
+- changeSet:
+      id: 1561105507144-8
+      author: shuangyu-eb
+      changes:
+      - addForeignKeyConstraint:
+          baseColumnNames: state_id
+          baseTableName: benefit_plan_dependents
+          constraintName: fk_benefit_plan_dependents_states
+          referencedColumnNames: id
+          referencedTableName: states
+
+
+- changeSet:
       id: 1556008164280-54
       author: wenhao-eb
       changes:
