--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1934,3 +1934,160 @@ databaseChangeLog:
       - dropColumn:
           columnName: approver_comment
           tableName: time_off_requests
+
+- changeSet:
+    id: 1562036165586-1
+    author: haibo-eb
+    changes:
+      - dropTable:
+          tableName: paid_holiday_employees
+
+- changeSet:
+    id: 1562036165586-2
+    author: haibo-eb
+    changes:
+      - dropTable:
+          tableName: paid_holidays
+
+- changeSet:
+    id: 1562036165586-3
+    author: haibo-eb
+    changes:
+      - createTable:
+          columns:
+            - column:
+                name: id
+                type: BIGINT
+                autoIncrement: true
+                constraints:
+                  primaryKey: true
+            - column:
+                name: country_id
+                type: BIGINT
+            - column:
+                name: company_id
+                type: BIGINT
+            - column:
+                name: name
+                type: VARCHAR(255)
+            - column:
+                name: created_at
+                type: datetime
+            - column:
+                name: updated_at
+                type: datetime
+            - column:
+                name: deleted_at
+                type: datetime
+          tableName: paid_holidays
+
+- changeSet:
+    id: 1562036165586-4
+    author: haibo-eb
+    changes:
+      - addForeignKeyConstraint:
+          baseColumnNames: company_id
+          baseTableName: paid_holidays
+          constraintName: fk_paid_holidays_companies
+          referencedColumnNames: id
+          referencedTableName: companies
+
+- changeSet:
+    id: 1562036165586-5
+    author: haibo-eb
+    changes:
+      - addForeignKeyConstraint:
+          baseColumnNames: country_id
+          baseTableName: paid_holidays
+          constraintName: fk_paid_holidays_countries
+          referencedColumnNames: id
+          referencedTableName: countries
+
+- changeSet:
+    id: 1562036165586-6
+    author: haibo-eb
+    changes:
+      - createTable:
+          columns:
+            - column:
+                name: id
+                type: BIGINT
+                autoIncrement: true
+                constraints:
+                  primaryKey: true
+            - column:
+                name: company_id
+                type: BIGINT
+            - column:
+                name: paid_holiday_id
+                type: BIGINT
+            - column:
+                name: is_selected
+                type: BOOLEAN
+            - column:
+                name: created_at
+                type: datetime
+            - column:
+                name: updated_at
+                type: datetime
+            - column:
+                name: deleted_at
+                type: datetime
+          tableName: companies_paid_holidays
+
+- changeSet:
+    id: 1562036165586-7
+    author: haibo-eb
+    changes:
+      - addForeignKeyConstraint:
+          baseColumnNames: company_id
+          baseTableName: companies_paid_holidays
+          constraintName: fk_companies_paid_holidays_companies
+          referencedColumnNames: id
+          referencedTableName: companies
+
+- changeSet:
+    id: 1562036165586-8
+    author: haibo-eb
+    changes:
+      - addForeignKeyConstraint:
+          baseColumnNames: paid_holiday_id
+          baseTableName: companies_paid_holidays
+          constraintName: fk_companies_paid_holidays_paid_holidays
+          referencedColumnNames: id
+          referencedTableName: paid_holidays
+
+- changeSet:
+    id: 1562036165586-9
+    author: haibo-eb
+    runOnchange: ture
+    changes:
+      - loadUpdateData:
+          columns:
+            - column:
+                name: id
+                type: NUMERIC
+            - column:
+                name: name
+                type: STRING
+          file: db/changelog/data/paid-holidays.csv
+          primaryKey: id
+          tableName: paid_holidays
+- changeSet:
+    id: 1562036165586-10
+    author: haibo-eb
+    changes:
+      - addColumn:
+          columns:
+            - column:
+                name: date
+                type: DATE
+          tableName: paid_holidays
+- changeSet:
+    id: 1562036165586-11
+    author: haibo-eb
+    changes:
+      - modifyDataType:
+          columnName: date
+          newDataType: varchar(255)
+          tableName: paid_holidays
