155 add denied requests (#151)
* add reviewed requests filter function

* finish ticket 155

* merge from master

* merge from master

* fix balance calc bug

* remove duplicate codes

* fix bug

* review

* review

* style check

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -1752,6 +1752,14 @@ databaseChangeLog:
           tableName: benefit_plans_users
 
 - changeSet:
+      id: 1556008164280-55
+      author: wenhao-eb
+      changes:
+      - dropColumn:
+          columnName: time_off_type_id
+          tableName: time_off_requests
+
+- changeSet:
       id: 1561343783113-1
       author: max-eb
       changes:
