--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -2049,22 +2049,6 @@ databaseChangeLog:
           referencedTableName: paid_holidays
 
 - changeSet:
-    id: 1562036165586-9
-    author: haibo-eb
-    runOnchange: ture
-    changes:
-      - loadUpdateData:
-          columns:
-            - column:
-                name: id
-                type: NUMERIC
-            - column:
-                name: name
-                type: STRING
-          file: db/changelog/data/paid-holidays.csv
-          primaryKey: id
-          tableName: paid_holidays
-- changeSet:
     id: 1562036165586-10
     author: haibo-eb
     changes:
@@ -2152,3 +2136,39 @@ databaseChangeLog:
                   name: deleted_at
                   type: datetime
           tableName: paid_holidays_users
+- changeSet:
+      id: 1562898994604-1
+      author: haibo-eb
+      changes:
+          - modifyDataType:
+                columnName: date
+                newDataType: DATE
+                tableName: paid_holidays
+
+- changeSet:
+      id: 1562898994604-2
+      author: haibo-eb
+      changes:
+        - addColumn:
+            columns:
+            - column:
+                name: name_show
+                type: VARCHAR(255)
+            tableName: paid_holidays
+
+- changeSet:
+      id: 1562898994604-3
+      author: haibo-eb
+      runOnchange: true
+      changes:
+          - loadUpdateData:
+                columns:
+                    - column:
+                          name: id
+                          type: NUMERIC
+                    - column:
+                          name: name
+                          type: STRING
+                file: db/changelog/data/paid-holidays.csv
+                primaryKey: id
+                tableName: paid_holidays
