--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -3,6 +3,8 @@ databaseChangeLog:
       file: db/changelog/db.changelog-0.0.1.yml
   - include:
       file: db/changelog/db.changelog-0.0.1-2.yml
+  - include:
+      file: db/changelog/db.changelog-0.0.1-3.yml
   # includeAll have bugs in 3.6.1, needs to upgrade to later versions to enable it to work
   # https://github.com/liquibase/liquibase/pull/698
   # https://github.com/spring-projects/spring-boot/issues/11615
