--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,18 @@
       <version>2.28.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-jdk8</artifactId>
+      <version>1.3.0.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <version>1.3.0.Final</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
