368：My time off balances - remaining balances on calendars. (#232)
* 368：My time off balances - remaining balances on calendars.

* 368：update

* 368：update

* 368：update

* 368：update

* 368：update

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -75,3 +75,15 @@ databaseChangeLog:
             constraintName: fk_users_deactivations_reasons
             referencedColumnNames: id
             referencedTableName: deactivation_reasons
+
+
+  - changeSet:
+      id: 1566463012920-1
+      author: bin-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: balance
+                  type: INT
+            tableName: time_off_requests
