298: replace with auth0 new sdk (#239)
* 298: to pull master

* 298: commit to start sub-task

* 298: Character spell

* 298: Add unit tests.

* 298: Format

* 298: Improve against review.

* 298： Improve permission check.

* 298： Update class permission.

* 299: Invite employee by auth0 (#240)

* 299: Invite employee via Auth0

* Jira/sh 396 verify password by auth0 (#235)

* 298： Throw exception if the new password is the same as old one when reset password.

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -40,3 +40,6 @@ aws:
 
 auth0:
   algorithm: RS256
+  domain: shamu-develop.auth0.com
+  jwks: https://shamu-develop.auth0.com/.well-known/jwks.json
+  customNamespace: https://interviewed.com/
